#2980: ignore PA 10.10 dedup_hash attribute